# show-island

./: .gitignore  README.md  config.toml  config.toml.utf8test  pyproject.toml
.claude/: settings.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-24-game-screenshot-recognizer-plan.md  2026-06-24-hotkey-ui-feedback-plan.md
docs/superpowers/specs/: 2026-06-24-game-screenshot-recognizer-design.md  2026-06-24-hotkey-ui-feedback-design.md
src/: main.py  matcher.py  screenshot.py  ui.py
src/show_island/: __init__.py  __main__.py  config.py  ui.py
tests/: test_config.py  test_matcher.py
