[project]
name = "show-island"
version = "0.1.0"
description = "游戏截图内容识别工具 — 全局快捷键触发截图，OpenCV 模板匹配识别预设图片内容"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pynput>=1.8.2",
    "pystray>=0.19.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/show_island"]

[dependency-groups]
dev = [
    "pytest",
]
